fix fullscreeen and watermark on mobile

--- a/public/css/bpmn.css
+++ b/public/css/bpmn.css
@@ -9,8 +9,8 @@ body,
 
 .watermark {
     top: 0;
-    height: 300%;
-    width: 300%;
+    height: 500%;
+    width: 500%;
     position: absolute;
     background-image: url('../img/watermark.png');
     background-size: auto; 
